--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
   <script type="importmap">
 {
   "imports": {
+    "@google/genai": "https://aistudiocdn.com/google-genai@^0.19.1",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.5",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^5.3.4",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "react-webcam": "https://aistudiocdn.com/react-webcam@^7.2.0",
     "dexie-react-hooks": "https://aistudiocdn.com/dexie-react-hooks@^4.2.0",
