--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/google-genai@0.25.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.24.1",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "react-webcam": "https://aistudiocdn.com/react-webcam@^7.2.0",
-    "dexie-react-hooks": "https://aistudiocdn.com/dexie-react-hooks@^4.2.0",
-    "dexie": "https://aistudiocdn.com/dexie@^4.2.1",
-    "tesseract.js": "https://aistudiocdn.com/tesseract.js@^6.0.1"
+    "@google/genai": "https://esm.sh/@google/genai",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.23.1",
+    "framer-motion": "https://esm.sh/framer-motion@11.2.10",
+    "react-webcam": "https://esm.sh/react-webcam@7.2.0",
+    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7",
+    "dexie": "https://esm.sh/dexie@4.0.7",
+    "tesseract.js": "https://esm.sh/tesseract.js@5.1.0"
   }
 }
 </script>
