--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -46,12 +47,14 @@
     "react-webcam": "https://esm.sh/react-webcam@7.2.0",
     "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7",
     "dexie": "https://esm.sh/dexie@4.0.7",
-    "tesseract.js": "https://esm.sh/tesseract.js@5.1.0"
+    "tesseract.js": "https://esm.sh/tesseract.js@5.1.0",
+    "jimp": "https://esm.sh/jimp@0.22.12",
+    "buffer": "https://esm.sh/buffer@6.0.3"
   }
 }
 </script>
 </head>
-  <body class="bg-brand-dark text-brand-light">
+  <body class="bg-brand-dark text-brand-light dark:bg-black dark:text-white transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
@@ -63,6 +66,10 @@
             console.log('SW registration failed: ', registrationError);
           });
         });
+      }
+      // Apply theme on initial load to prevent flash of wrong theme
+      if (localStorage.getItem('theme') === 'dark') {
+        document.documentElement.classList.add('dark');
       }
     </script>
   </body>
