--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%2313262F'/%3E%3Ctext x='50' y='50' dominant-baseline='central' text-anchor='middle' font-family='Manrope, sans-serif' font-size='50' font-weight='bold' fill='%23D3D0CB'%3ESN%3C/text%3E%3C/svg%3E">
     <meta name="theme-color" content="#13262F">
     <style>
       body {
@@ -47,9 +48,7 @@
     "react-webcam": "https://esm.sh/react-webcam@7.2.0",
     "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7",
     "dexie": "https://esm.sh/dexie@4.0.7",
-    "tesseract.js": "https://esm.sh/tesseract.js@5.1.0",
-    "jimp": "https://esm.sh/jimp@0.22.12",
-    "buffer": "https://esm.sh/buffer@6.0.3"
+    "tesseract.js": "https://esm.sh/tesseract.js@5.1.0"
   }
 }
 </script>
